metadata/force-app/main/default/objects/CustomName_JEKRN__c/CustomName_JEKRN__c.object-meta.xml
<CustomObject>
    <description>Description_eapim</description>
    <label>CustomLabel_eEYKl</label>
    <nameField>
        <label>CustomLabel_eEYKl</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_eEYKls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>