metadata/force-app/main/default/objects/CustomName_JEKRN__c/fields/CustomField_BCEHp__c.field-meta.xml
<CustomField>
    <fullName>CustomField_BCEHp__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldZTgtF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>