metadata/force-app/main/default/objects/CustomName_JEKRN__c/fields/CustomField_fGfAT__c.field-meta.xml
<CustomField>
    <fullName>CustomField_fGfAT__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldwwFDR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>