metadata/force-app/main/default/objects/CustomName_JEKRN__c/fields/CustomField_sHEKp__c.field-meta.xml
<CustomField>
    <fullName>CustomField_sHEKp__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldUxRPc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>